# OperatorOS

./: .replit  README.md  build.sh  deploy.py  fix-errors.ts  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt  routes.py  start.py  test_git_agent.py  test_hello_github_agent.py  test_log.md
agents/: .gitkeep  __init__.py  create-a-comprehensive-test-agent.py  create-a-final-gitpushagent-integration-test-agent.py  create-a-final-integration-test-agent.py  create-a-final-test-agent.py  create-a-log-analyzer-agent.py  create-a-monitoring-agent.py  create-a-task-scheduler-agent.py  create-a-test-agent-for-debugging.py  create-a-web-scraper-for-product-prices.py  create-agent-via-deploy-endpoint.py  create-agent-via-deployments-endpoint.py  create-an-email-automation-agent.py  create-gitpushagent-test-agent.py  create-test-agent.py  git-push-agent.py  hello-github-push-agent.py  monitoring-test-1751249040.py  production-test-agent.py
blueprints/: .gitkeep  __init__.py
client/src/: App.tsx  index.css
client/src/components/: activity-log.tsx  deployment-pipeline.tsx  header.tsx  sidebar.tsx
client/src/hooks/: use-websocket.ts
client/src/pages/: agents.tsx  blueprints.tsx  console.tsx  deployments.tsx  logs.tsx
logs/: .gitkeep  __init__.py
server/: routes.ts  storage.ts
server/services/: agent-generator.ts  github.ts  openai.ts  render.ts  testing.ts
shared/: schema.ts
templates/: console.html
