[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Danielmacdonald988 <49652589+Danielmacdonald988@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
openai = "^1.93.0"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
websockets = "^15.0.1"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
